# through-text

./: .travis.yml  CHANGELOG.md  LICENSE  README.md  through-text.cabal
.github/workflows/: haskell-ci.yml
src/Data/Text/: Through.hs
