name:                through-text
version:             0.1.0.0
synopsis:            Convert textual types through Text without needing O(n^2) instances.
description:         Convert textual types through Text without needing O(n^2) instances.
                     .
                     See the README for more information: <https://github.com/bergmark/through-text/blob/master/README.md>
homepage:            https://www.github.com/bergmark/through-text
bug-reports:         https://www.github.com/bergmark/through-text
license:             BSD3
license-file:        LICENSE
author:              Adam Bergmark
maintainer:          adam@bergmark.nl
copyright:           (c) 2015 Adam Bergmark
category:            Data
build-type:          Simple
cabal-version:       >=1.10
tested-with:
  GHC == 7.0.4,
  GHC == 7.4.2,
  GHC == 7.6.3,
  GHC == 7.8.4,
  GHC == 7.10.3,
  GHC == 8.0.2,
  GHC == 8.2.2,
  GHC == 8.4.4,
  GHC == 8.6.5,
  GHC == 8.8.1,
  GHC == 8.10.1
extra-source-files:
  LICENSE
  CHANGELOG.md
  README.md

source-repository head
  type:              git
  location:          https://github.com/bergmark/through-text.git

library
  default-language:  Haskell2010
  ghc-options:       -Wall
  hs-source-dirs:    src
  exposed-modules:   Data.Text.Through
  build-depends:
      base >= 4.3 && < 4.15
    , bytestring >= 0.9 && < 0.11
    , case-insensitive >= 0.1 && < 1.3
    , text >= 0.11 && < 1.3
